# PrismaOS

./: .gitignore  Cargo.toml  DEVELOPMENT.md  DEV_GUIDE.md  GNUmakefile  LICENSE  README.md  build.rs  limine.cfg  limine.conf  linker-aarch64.ld  linker-loongarch64.ld  linker-riscv64.ld  linker-x86_64.ld  run.sh  setup.sh  x86_64-prisma.json
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: rust.yml
assets/fonts/: lat0-16.sbf  lat1u-16.sbf
crates/Luminal/: Cargo.toml  NOSTD.md  README.md  test_simple.rs
crates/Luminal/examples/: no_std_test.rs
crates/Luminal/src/: lib.rs
crates/Luminal/src/runtime/: error.rs  executor.rs  handle.rs  join_handle.rs  mod.rs  runtime.rs  simple_executor.rs  task.rs  waker.rs  worker.rs
crates/Luminal/tests/: integration_tests.rs
crates/Statue/: Cargo.toml
crates/Statue/src/: arch.rs  error.rs  execution.rs  instruction.rs  lib.rs  loader.rs  memory.rs  syscall.rs
crates/ext4-view-rs/: .gitignore
crates/galleon2/: Cargo.toml
crates/galleon2/src/: allocation.rs  boot_block.rs  btree.rs  file.rs  file_record.rs  fs.rs  galleon_fs.rs  indexing.rs  journal.rs  lib.rs  mft.rs  super_block.rs  tests.rs
crates/galleon2/src/types/: mod.rs  pathbuf.rs
crates/galleonfs/: Cargo.toml
crates/galleonfs/src/: advanced.rs  directory.rs  error.rs  inode.rs  lib.rs  platform.rs  replication.rs  storage.rs  transaction.rs  vfs.rs
crates/lib_kernel/: Cargo.toml
crates/lib_kernel/src/: consts.rs  events.rs  fast_console.rs  font.rs  gdt.rs  gdt_correct.rs  interrupts.rs  lib.rs  logger.rs  scrolling_text.rs  shadow_console.rs  time.rs
crates/lib_kernel/src/api/: commands.rs  objects.rs  syscall_entry.rs  syscalls.rs
crates/lib_kernel/src/drivers/: mod.rs  usb.rs
crates/lib_kernel/src/elf/: mod.rs
crates/lib_kernel/src/executor/: keyboard.rs  mod.rs  task.rs
crates/lib_kernel/src/utils/: mod.rs  (+3 more)
crates/usb/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/usb/src/: bus.rs  control_pipe.rs  device.rs  device_builder.rs  dummy.rs  lib.rs  test_class.rs
crates/xhci/: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
crates/xhci/.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
crates/xhci/src/: lib.rs  macros.rs
drivers/ahci/: Cargo.toml
drivers/ahci/src/: command.rs  consts.rs  device.rs  lib.rs  port.rs
drivers/framebuffer/: Cargo.toml
drivers/framebuffer/src/: lib.rs
drivers/ide/: Cargo.toml
drivers/ide/src/: consts.rs  lib.rs  types.rs
drivers/pci/: Cargo.toml
drivers/pci/src/: lib.rs
drivers/ps2/: Cargo.toml
drivers/ps2/src/: lib.rs
drivers/serial/: Cargo.toml
drivers/serial/src/: lib.rs
drivers/speaker/: Cargo.toml
drivers/speaker/src/: lib.rs
drivers/timer/: Cargo.toml
drivers/timer/src/: lib.rs
drivers/usb/: Cargo.toml  README.md
drivers/usb/src/: async_ops.rs  class.rs  controller.rs  descriptor.rs  device.rs  endpoint.rs  enumeration.rs  error.rs  hub.rs  lib.rs  memory.rs  transfer.rs  types.rs
ext4-view-rs/: .deny.toml  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-MIT
ext4-view-rs/src/: block_cache.rs  block_group.rs  block_index.rs  block_size.rs  checksum.rs  dir.rs  dir_block.rs  dir_entry.rs  dir_entry_hash.rs  dir_htree.rs  error.rs  extent.rs  features.rs  file.rs  file_type.rs  format.rs  inode.rs  iters.rs  journal.rs  label.rs  lib.rs  metadata.rs  path.rs  reader.rs  resolve.rs  superblock.rs  test_util.rs  util.rs  uuid.rs
ext4-view-rs/src/iters/: extents.rs  file_blocks.rs  read_dir.rs
ext4-view-rs/src/journal/: block_header.rs  block_map.rs  commit_block.rs  descriptor_block.rs  revocation_block.rs  superblock.rs
iso/: floppy.img
kernel/: .gitignore  Cargo.toml  GNUmakefile  build.rs  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/src/: boot_userspace.rs  consts.rs  drivers.rs  events.rs  font.rs  gdt.rs  interrupts.rs  main.rs  scrolling_text.rs  time.rs  userspace_isolation.rs  userspace_loader.rs  userspace_test.rs
kernel/src/api/: mod.rs  objects.rs  syscalls.rs
kernel/src/drivers/: framebuffer.rs  keyboard.rs  mod.rs  mouse.rs  serial.rs  timer.rs
kernel/src/drivers/ahci/: command.rs  device.rs  error.rs  mod.rs  port.rs
kernel/src/drivers/ide/: consts.rs  mod.rs  types.rs
kernel/src/drivers/pci/: mod.rs
kernel/src/drivers/ps2/: mod.rs
kernel/src/drivers/serial/: mod.rs
kernel/src/drivers/speaker/: mod.rs
kernel/src/drivers/timer/: mod.rs
kernel/src/elf/: mod.rs
kernel/src/executor/: keyboard.rs  mod.rs  task.rs
kernel/src/gdt/: gdt.rs
kernel/src/init/: core.rs  framebuffer.rs  memory.rs  mod.rs  subsystems.rs  usb.rs  userspace.rs
kernel/src/loader/: elf_loader.rs  mod.rs
kernel/src/memory/: allocator.rs  dma.rs  mod.rs  paging.rs
kernel/src/memory/gdt/: gdt.rs
kernel/src/process/: mod.rs
kernel/src/scheduler/: cpu.rs  mod.rs  process.rs  smp.rs  switch.rs
kernel/src/shell/: README.md  mod.rs
kernel/src/syscall/: entry.rs  handlers.rs  mod.rs
kernel/src/usb/: consts.rs  mod.rs
kernel/src/utils/: bsod.rs  mod.rs  render.rs  system.rs
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/task/: keyboard.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
userspace/: Cargo.toml  build_userspace.sh
userspace/apps/boot_gui/: Cargo.toml  build.sh
userspace/apps/boot_gui/src/: lib.rs
userspace/apps/demo/: Cargo.toml
userspace/apps/demo/src/: lib.rs
userspace/apps/hello_prisma/: Cargo.toml
userspace/apps/hello_prisma/src/: main.rs
userspace/apps/hello_world/: Cargo.toml
userspace/apps/hello_world/src/: main.rs
userspace/apps/login_screen/: Cargo.toml
userspace/apps/login_screen/src/: main.rs
userspace/apps/syscall_test/: Cargo.toml
userspace/apps/syscall_test/src/: main.rs
userspace/compositor/: Cargo.toml
userspace/compositor/src/: exclusive.rs  input.rs  lib.rs  renderer.rs  surface.rs
userspace/runtime/: Cargo.toml
userspace/runtime/src/: lib.rs
userspace/target-specs/: x86_64-prisma-userspace.json  x86_64-prismaos.json
(+64 files in other folders)
