[workspace]
members = [
    "crates/*",
    "drivers/*",
    "kernel"
]
resolver = "2"

[workspace.dependencies]

# Internal crates
galleonfs = { path = "./crates/galleonfs" }
luminal_rt = { path = "./crates/Luminal/" }
kernel = { path = "./kernel" }
lib_kernel = { path = "./crates/lib_kernel/" }

# Drivers
ide = { path = "./drivers/ide/" }
ahci = { path = "./drivers/ahci/" }
pci = { path = "./drivers/pci/" }

# External crates
futures-util = { version = "0.3.31", default-features = false }
futures = { version = "0.3.31", default-features = false }