[workspace]
members = [
    "crates/*",
    "drivers/*",
    "kernel"
]

resolver = "2"

[workspace.dependencies]

# Internal crates
galleon2 = { path = "./crates/galleon2" }
luminal_rt = { path = "./crates/Luminal/" }
kernel = { path = "./kernel" }
lib_kernel = { path = "./crates/lib_kernel/" }
xhci = { path = "./crates/xhci/" }

# Drivers
ide = { path = "./drivers/ide/" }
ahci = { path = "./drivers/ahci/" }
pci = { path = "./drivers/pci/" }
usb = { path = "./drivers/usb/" }

# External crates
futures-util = { version = "0.3.31", default-features = false }
futures = { version = "0.3.31", default-features = false }

# Workspace panic settings
[profile.dev]
panic = "abort"

[profile.release] 
panic = "abort"

[profile.test]
panic = "abort"