[package]
name = "pci"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "A no-std Rust library for parsing and executing ELF binaries in operating systems"
repository = "https://github.com/yourusername/elfos"
keywords = ["elf", "binary", "loader", "os", "no-std"]
categories = ["no-std", "parser-implementations", "os"]
readme = "README.md"

[lib]
name = "pci"
crate-type = ["lib"]

[dependencies]
lib_kernel = { workspace = true }

luminal_rt = { workspace = true }

# Workspace dependencies
ez_pci = "1.2.0"
ids_rs = { git = "https://github.com/tristanpoland/IDS_RS", rev = "07a057efb6ed7db1c7ec68a4f5b5b12cd830763a", version = "0.1.0" }


[features]
default = []
# Optional features for different architectures
x86_64 = []
aarch64 = []
riscv = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[lints.rust]
unsafe_code = "allow"