[package]
name = "compositor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
spin = "0.9"
linked_list_allocator = "0.10"

[profile.dev]
panic = "abort"

[profile.release] 
panic = "abort"